--- a/Seminar2/templates/press.html
+++ b/Seminar2/templates/press.html
@@ -36,6 +36,24 @@
       </button>
     </a>
 
+    <a href="{{ url_for('user_data') }}">
+      <button type="submit">
+        "Данные пользователя"
+      </button>
+    </a>
+
+    <a href="{{ url_for('number') }}">
+      <button type="submit">
+        "Число и квадрат"
+      </button>
+    </a>
+
+    <a href="{{ url_for('hello_name') }}">
+      <button type="submit">
+        "Имя пользователя flash"
+      </button>
+    </a>
+
   </div> 
 </body>
 </html>
